# claude-skill-tester

./: .gitignore  ABOUT.md  COMMAND_REFERENCE.md  README.md  SKILL_FRONTMATTER.md  pyproject.toml
.claude/rules/: documentation.md  frontmatter-reference.md
examples/: sample-tests.yaml
ideas/: landscape-competitive-analysis.md
skill_tester/: __main__.py  collider.py  diagnose.py  generator.py  health.py  models.py  optimizer.py  parser.py  reporter.py  runner.py  scorer.py
tests/: test_collider.py  test_diagnose.py  test_health.py  test_optimizer.py  test_parser.py  test_scorer.py
